--- a/src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
+++ b/src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
@@ -23,14 +23,16 @@
 		<MauiVersion>10.0.30</MauiVersion>
 
 		<!-- Display name -->
-		<ApplicationTitle>侠客日记</ApplicationTitle>
+		<ApplicationTitle>Sdiray</ApplicationTitle>
 
 		<!-- App Identifier -->
 		<ApplicationId>com.yucore.swashbucklerdiary</ApplicationId>
 
 		<!-- Versions -->
-		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
-		<ApplicationVersion>1</ApplicationVersion>
+		<ApplicationDisplayVersion>2.0</ApplicationDisplayVersion>
+		<ApplicationVersion>2</ApplicationVersion>
+		
+		<AndroidPackageFormat>apk</AndroidPackageFormat>
 
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'ios'">15.0</SupportedOSPlatformVersion>
 		<SupportedOSPlatformVersion Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'maccatalyst'">15.0</SupportedOSPlatformVersion>
@@ -112,7 +114,7 @@
 		<MauiIcon Condition="$([MSBuild]::GetTargetPlatformIdentifier('$(TargetFramework)')) == 'windows'" Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.png" Color="#FFFFFF" />
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.jpg" Color="#FFFFFF" BaseSize="128,128" />
+		<MauiSplashScreen Include="Resources\AppIcon\appicon.svg" Color="#FFFFFF" BaseSize="128,128" />
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
