ci: trigger workflow indexing

--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -2,6 +2,10 @@ name: Build macOS
 
 on:
   workflow_dispatch:
+  push:
+    branches: [master]
+    paths:
+      - '.github/workflows/build-macos.yml'
 
 jobs:
   build:
