--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           dotnet-version: '10.0.x'
 
-      - name: Install MAUI workload
-        run: dotnet workload install maui-maccatalyst
+      - name: Install MAUI workloads
+        run: dotnet workload restore src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
 
       - name: Build macOS
         run: dotnet publish src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj -f net10.0-maccatalyst -c Release
