--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -19,7 +19,7 @@ jobs:
           dotnet-version: '10.0.x'
 
       - name: Install MAUI workloads
-        run: dotnet workload restore src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj
+        run: dotnet workload install maui --skip-manifest-update
 
       - name: Build macOS
         run: dotnet publish src/SwashbucklerDiary.Maui/SwashbucklerDiary.Maui.csproj -f net10.0-maccatalyst -c Release -p:EnableCodeSigning=false -p:CodesignRequireProvisioningProfile=false -p:CodesignKey= -p:CodesignProvision=
